--- a/App.css
+++ b/App.css
@@ -1,10 +1,10 @@
 #main__container {
-    width: 100%;
-    max-width: 30%;
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  max-width: 30%;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #img__container {
@@ -16,4 +16,23 @@
 #welcome__saying {
   font-weight: 200;
   font-size: 2rem;
+}
+
+#btn__like {
+  position: absolute;
+  right: 34.5%;
+  margin-top: 15%;
+  font-size: 1.3rem;
+  border-radius: 1.98rem 0 1.6rem 0;
+}
+
+#login__button {
+  position: absolute;
+  top: 50%;
+  right: 45%;
+  text-decoration: none;
+  background-color: rgb(46, 226, 46);
+  color: white;
+  padding: 10px;
+  border-radius: 1.6rem;
 }
