--- a/App.css
+++ b/App.css
@@ -1,16 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+.App {
+  background-color: rgb(0, 0, 0);
+}
 #main__container {
   width: 100%;
-  max-width: 30%;
-  margin: 20px auto;
+  /* max-width: 30%; */
+  display: flex;
+  justify-content: baseline;
+}
+
+#user__img {
+  width: 75px;
+  height: 75px;
+  /* box-shadow: 3px 3px 1px 1px rgba(255, 0, 242, 0.2) !important; */
+  /* box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9) !important; */
+}
+
+#last__played {
+  font-weight: 500;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  translate: 10px;
+}
+
+#site__btn {
+  background-color: rgb(0, 0, 0);
+  border-color: black;
+  color: rgb(255, 255, 255);
+  /* box-shadow: 3px 3px 1px 1px rgba(255, 0, 242, 0.2); */
+  /* box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9); */
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  font-weight: 400;
+  font-size: 1rem;
+  align-items: center;
+}
+
+#user__card {
+  /* box-sizing: border-box; */
+  margin-bottom: 50px;
+  margin-right: 100px;
+  border-radius: 1.6rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  background-color: rgb(0, 0, 0);
+
+  /* box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9);  */
+  /* backdrop-filter: blur(2rem); */
+  padding-top: 15px;
+  align-self: flex-start;
+  padding-bottom: 400px;
+  translate: -50px -50px;
+}
+
+#song__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 20px;
+  column-gap: 80px;
+  margin-top: 120px;
 }
 
 #img__container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  width: 100%;
+  height: 200px;
+  border-radius: 1.6rem !important;
+  /* box-shadow: 3px 3px 1px 1px rgba(255, 0, 242, 0.2) !important; */
+  /* box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9) !important; */
 }
 
 #welcome__saying {
@@ -18,21 +82,116 @@
   font-size: 2rem;
 }
 
-#btn__like {
+.btn__like {
   position: absolute;
-  right: 34.5%;
-  margin-top: 15%;
+  translate: -20px 25px;
   font-size: 1.3rem;
-  border-radius: 1.98rem 0 1.6rem 0;
+  border: none !important;
+  background-color: rgb(60, 60, 60) !important;
+  color: white !important;
+  border-radius: 0.9rem !important;
+  /* box-shadow: 3px 3px 1px 1px rgba(255, 0, 242, 0.2); */
+  /* box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9); */
 }
 
 #login__button {
   position: absolute;
   top: 50%;
-  right: 45%;
+  right: 47%;
   text-decoration: none;
-  background-color: rgb(46, 226, 46);
-  color: white;
+  background-color: rgb(239, 239, 239);
+  color: black;
   padding: 10px;
   border-radius: 1.6rem;
+  box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9);
+}
+
+.active {
+  background-color: rgb(59, 212, 59) !important;
+}
+
+#song__creds {
+  color: white;
+}
+
+#img__song {
+  border-radius: 1.4rem;
+  margin-right: 3px;
+  width: 150px;
+  height: 150px;
+}
+
+#icon__img {
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+}
+
+#logo__img {
+  width: 25px;
+  height: 25px;
+  margin-right: 2px;
+}
+
+#search__container {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  translate: -50px;
+}
+
+#second__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#search__bar {
+  border-radius: 1.6rem 0 0 1.6rem;
+  border-color: rgb(60, 60, 60);
+  border-style: solid;
+  background-color: black;
+  width: 400px;
+  height: 40px;
+}
+
+#search__img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  background-color: rgb(60, 60, 60);
+}
+
+#search__background {
+  background-color: rgb(60, 60, 60);
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 1.6rem 1.6rem 0;
+}
+
+#overall {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#nav__bar {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: end;
+  margin-top: 20px;
+  align-items: center;
+}
+
+#title__name {
+  color: white;
+  margin-right: 20px;
+  margin-left: 300px;
+  font-weight: 200;
+  font-size: 1.2rem;
 }
