--- a/App.css
+++ b/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 .App {
   background-color: rgb(0, 0, 0);
 }
@@ -38,6 +39,20 @@
   font-weight: 400;
   font-size: 1rem;
   align-items: center;
+}
+#site__btn__rec {
+  background-color: rgb(0, 0, 0);
+  border-color: black;
+  color: rgb(255, 255, 255);
+  /* box-shadow: 3px 3px 1px 1px rgba(255, 0, 242, 0.2); */
+  /* box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9); */
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  font-weight: 400;
+  font-size: 1rem;
+  align-items: center;
+  width: 300px;
 }
 
 #user__card {
@@ -95,15 +110,16 @@
 }
 
 #login__button {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
-  right: 47%;
+  right: 47%; */
+  margin-left: 50px;
   text-decoration: none;
   background-color: rgb(239, 239, 239);
   color: black;
   padding: 10px;
   border-radius: 1.6rem;
-  box-shadow: 3px 3px 1px 1px rgba(0, 173, 181, 0.9);
+  box-shadow: 3px 3px 1px 1px rgba(0, 236, 114, 0.9);
 }
 
 .active {
@@ -153,6 +169,7 @@
   background-color: black;
   width: 400px;
   height: 40px;
+  color: white;
 }
 
 #search__img {
@@ -194,4 +211,93 @@
   margin-left: 300px;
   font-weight: 200;
   font-size: 1.2rem;
+}
+#title__name__two {
+  color: white;
+  margin-left: 100px;
+  font-weight: 200;
+  font-size: 1.2rem;
+  flex-grow: 2;
+}
+
+#login__div {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+
+#main__welcome {
+  color: white;
+  font-weight: 100;
+  font-size: 3rem;
+  align-self: center;
+}
+
+#home__nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding-top: 30px;
+  padding-right: 10px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+li a {
+  text-decoration: none;
+  color: white;
+}
+
+li {
+  padding: 2px 20px;
+}
+
+#contact__btn {
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border-radius: 1.6rem;
+  margin-right: 50px;
+}
+
+#login__button__two {
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 6px 10px;
+  border-radius: 1.6rem;
+}
+
+#icon__img__two {
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+  border: 1px solid white;
+  border-radius: 1.6rem;
+  padding: 2px;
+}
+
+#main__welcome div {
+  margin-top: -25px;
+  font-style: oblique;
+}
+
+#landing__container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  height: 100%;
+}
+
+#seemore__btn {
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  border-radius: 1.6rem;
+  margin-left: 20px;
+  padding: 10px;
 }
